--- a/countries-maper/pom.xml
+++ b/countries-maper/pom.xml
@@ -19,6 +19,11 @@
 			<version>1.1</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.3</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
