--- a/countries-maper/pom.xml
+++ b/countries-maper/pom.xml
@@ -7,6 +7,10 @@
 	<name>CountriesMapper</name>
     <packaging>jar</packaging>
     
+    <properties>
+    	<version.jacoco>0.7.5.201505241946</version.jacoco>
+    </properties>
+    
 	<dependencies>
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -66,7 +70,7 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-			<plugin>
+            <plugin>
 			    <artifactId>appassembler-maven-plugin</artifactId>
                 <groupId>org.codehaus.mojo</groupId>
                 <version>1.7</version>
@@ -99,6 +103,29 @@
 					</archive>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${version.jacoco}</version>
+                <configuration>
+                    <skip>${maven.test.skip}</skip>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <!--make sure it runs AFTER integration tests -->
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 </project>
