--- a/countries-maper/pom.xml
+++ b/countries-maper/pom.xml
@@ -25,6 +25,11 @@
 			<version>2.1</version>
 		</dependency>
 		<dependency>
+			<groupId>net.sf.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>2.3</version>
+		</dependency>
+		<dependency>
         	<groupId>org.codehaus.jackson</groupId>
         	<artifactId>jackson-mapper-asl</artifactId>
         	<version>1.9.13</version>
