--- a/countries-maper/pom.xml
+++ b/countries-maper/pom.xml
@@ -20,6 +20,16 @@
     
 	<dependencies>
 		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.11</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.glassfish.jaxb</groupId>
+  			<artifactId>jaxb-runtime</artifactId>
+    		<version>2.2.10-b140310.1920</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.1</version>
