--- a/mapper/APP/pom.xml
+++ b/mapper/APP/pom.xml
@@ -5,32 +5,48 @@
     <artifactId>mapper</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>APP</artifactId>
+  <artifactId>API</artifactId>
   <dependencies>
   	<dependency>
-  		<groupId>org.codehaus.jettison</groupId>
-  		<artifactId>jettison</artifactId>
-  		<version>1.3.7</version>
+  		<groupId>de.heinfricke</groupId>
+  		<artifactId>APP</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
   	<dependency>
-    	<groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-mapper-asl</artifactId>
-        <version>1.9.13</version>
-    </dependency>
-    <dependency>
-		<groupId>com.sun.jersey</groupId>
-		<artifactId>jersey-client</artifactId>
-		<version>1.19</version>
-	</dependency>
-	<dependency>
-		<groupId>net.sf.opencsv</groupId>
-		<artifactId>opencsv</artifactId>
-		<version>2.3</version>
-	</dependency>
-	<dependency>
-		<groupId>de.heinfricke</groupId>
-		<artifactId>ApacheCLI</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</dependency>
+  		<groupId>de.heinfricke</groupId>
+  		<artifactId>FTP</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>de.heinfricke</groupId>
+  		<artifactId>LocalFileSystem</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
+  
+  <build>
+  	<plugins>
+  		<plugin>
+			<artifactId>appassembler-maven-plugin</artifactId>
+            <groupId>org.codehaus.mojo</groupId>
+            <version>1.7</version>
+            <configuration>
+            	<programs>
+                	<program>
+                    	<mainClass>de.heinfricke.countriesmapper.CountriesDirectoryMake</mainClass>
+                        	<name>CountriesDirectoryMake</name>
+            		</program>
+            	</programs>    
+         	</configuration>
+            <executions>
+            	<execution>
+                	<phase>package</phase>
+                    <goals>
+                    	<goal>assemble</goal>
+                    </goals>
+                </execution>
+            </executions>
+		</plugin>
+	</plugins>
+  </build>
 </project>
