--- a/mapper/API/pom.xml
+++ b/mapper/API/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>mapper</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>APP</artifactId>
+  <artifactId>API</artifactId>
   <dependencies>
   	<dependency>
   		<groupId>org.codehaus.jettison</groupId>
