--- a/mapper/APP/pom.xml
+++ b/mapper/APP/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>commons-cli</artifactId>
       <version>1.3.1</version>
     </dependency>
+  	<dependency>
+  		<groupId>de.heinfricke</groupId>
+  		<artifactId>Universal</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
   
   <build>
