--- a/mapper/WebAplication/pom.xml
+++ b/mapper/WebAplication/pom.xml
@@ -48,6 +48,11 @@
     	<artifactId>jersey-multipart</artifactId>
     	<version>1.19</version>
     </dependency>
+    <dependency>
+    	<groupId>de.heinfricke</groupId>
+    	<artifactId>Universal</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>WebAplication</finalName>
