Added using RESTClient with Java's HttpServlet

--- a/mapper/pom.xml
+++ b/mapper/pom.xml
@@ -13,6 +13,7 @@
   	<module>API</module>
     <module>WebAplication</module>
     <module>Universal</module>
+    <module>NewWebApp</module>
   </modules>  
   
     <build>
