--- a/mapper/pom.xml
+++ b/mapper/pom.xml
@@ -14,6 +14,7 @@
     <module>WebAplication</module>
     <module>Universal</module>
     <module>NewWebApp</module>
+    <module>JerseyWebApp</module>
   </modules>  
   
     <build>
